overflow fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,10 @@ font-family: 'Titillium Web', sans-serif; */
   outline: 0 none;
 }
 
+body{
+  overflow-x: hidden;
+}
+
 header > div > div > nav.main-nav {
   height: 7em;
   width: 100%;
@@ -445,7 +449,8 @@ header
   top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
 }
@@ -458,6 +463,7 @@ header
   height: 100vh;
   background: white;
   text-align: center;
+  overflow-y: auto;
 }
 
 header #myModalSignUp .modal-content .title {
